--- a/login.html
+++ b/login.html
@@ -152,6 +152,6 @@
             </form>
         </div>
     </div>
-    <script src="/js/auth.js" type="module"></script>
+    <script src="auth.js" type="module"></script>
 </body>
 </html>
