--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil - FastFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         .icon-grid {
             display: grid;
@@ -84,9 +84,9 @@
         </div>
     </div>
 
-    <script src="/js/profile.js" type="module"></script>
+    <script src="profile.js" type="module"></script>
     <script type="module">
-        import { auth, onAuthStateChanged } from '/js/firebase-init.js';
+        import { auth, onAuthStateChanged } from './firebase-init.js';
         onAuthStateChanged(auth, (user) => {
             if (!user) {
                 window.location.href = 'login.html';
