--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="nav-links" id="nav-links">
       <a href="#" onclick="switchTab('filmes')" id="filmes-tab" class="active">Filmes</a>
       <a href="#" onclick="switchTab('series')" id="series-tab">Séries</a>
-      <a href="#" onclick="switchTab('tv')" id="tv-tab">TV ao Vivo</a>
+      <a href="player-tv.html" id="tv-tab">TV ao Vivo</a>
       <!-- Botões mobile -->
     </div>
 
@@ -178,14 +178,7 @@
     </div>
   </div>
 
-  <!-- Player Modal -->
-  <div id="player-modal" class="modal" style="display: none; background-color: black; align-items: center; justify-content: center;">
-    <div class="video-container" style="width: 100%; height: 100%; max-width: none; max-height: none;">
-      <a href="#" onclick="closePlayerModal()" class="back-button">Voltar</a>
-      <video id="modalVideoPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
-    </div>
-    <p id="modalErrorMessage" class="error-message" style="display:none; position: absolute; bottom: 20px;"></p>
-  </div>
+  
 
   <!-- Expired Account Modal -->
   <div id="expired-account-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); color: white; flex-direction: column; align-items: center; justify-content: center; text-align: center; z-index: 2000;">
