--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' https://cdn.tailwindcss.com https://cdn.jsdelivr.net https://www.gstatic.com;
+        style-src 'self' https://cdn.tailwindcss.com https://fonts.googleapis.com;
+        font-src https://fonts.gstatic.com;
+        img-src 'self' https://via.placeholder.com https://kitsu.io https://image.tmdb.org data:;
+        connect-src 'self' https://fasthub-9a206-default-rtdb.firebaseio.com https://kitsu.io https://api.themoviedb.org https://pub-b518a77f46ca4165b58d8329e13fb2a9.r2.dev;
+        media-src *;
+    ">
     <title>FastFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
@@ -60,12 +69,12 @@
     <nav class="navbar fixed top-0 w-full z-20 flex justify-between items-center p-4">
         <h1 class="text-2xl font-bold">FastFlix</h1>
         <div class="flex items-center space-x-4">
-            <a href="#" id="filmes-tab" onclick="switchTab('filmes')" class="hover:text-gray-300" aria-label="Filmes">Filmes</a>
-            <a href="#" id="series-tab" onclick="switchTab('series')" class="hover:text-gray-300" aria-label="Séries">Séries</a>
-            <a href="#" id="tv-tab" onclick="switchTab('tv')" class="hover:text-gray-300" aria-label="TV ao Vivo">TV ao Vivo</a>
+            <a href="#" id="filmes-tab" class="hover:text-gray-300" aria-label="Filmes">Filmes</a>
+            <a href="#" id="series-tab" class="hover:text-gray-300" aria-label="Séries">Séries</a>
+            <a href="#" id="tv-tab" class="hover:text-gray-300" aria-label="TV ao Vivo">TV ao Vivo</a>
             <input id="search" type="text" placeholder="Buscar..." class="bg-gray-800 text-white p-2 rounded" aria-label="Buscar conteúdo">
             <div class="relative">
-                <button onclick="toggleDropdown()" aria-label="Perfil">
+                <button id="profile-button" aria-label="Perfil">
                     <img id="profile-icon-display" src="Default.png" alt="Ícone do perfil" class="w-8 h-8 rounded">
                     <span id="user-name" class="ml-2"></span>
                 </button>
