--- a/login.html
+++ b/login.html
@@ -39,9 +39,18 @@
         }
         </script><!DOCTYPE html>
 <html lang="pt-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' https://cdn.tailwindcss.com https://www.gstatic.com;
+        style-src 'self' https://cdn.tailwindcss.com https://fonts.googleapis.com;
+        font-src https://fonts.gstatic.com;
+        img-src 'self';
+        connect-src 'self' https://fasthub-9a206-default-rtdb.firebaseio.com;
+    ">
     <title>FastFlix - Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="app.js"></script>
@@ -61,7 +70,7 @@
                 <input id="remember-me" type="checkbox" class="mr-2">
                 <label for="remember-me">Lembrar-me</label>
             </div>
-            <button type="button" onclick="document.getElementById('login-form').dispatchEvent(new Event('submit'))" class="w-full bg-red-600 text-white p-2 rounded hover:bg-red-700" aria-label="Entrar">Entrar</button>
+            <button id="login-button" class="w-full bg-red-600 text-white p-2 rounded hover:bg-red-700" aria-label="Entrar">Entrar</button>
             <p id="error-message" class="mt-2 text-center"></p>
         </div>
     </div>
