--- a/index.html
+++ b/index.html
@@ -1,106 +1,284 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self' https://cdn.jsdelivr.net https://www.gstatic.com;
-        style-src 'self' https://fonts.googleapis.com;
-        font-src https://fonts.gstatic.com;
-        img-src 'self' https://via.placeholder.com https://kitsu.io https://image.tmdb.org data:;
-        connect-src 'self' https://fasthub-9a206-default-rtdb.firebaseio.com https://kitsu.io https://api.themoviedb.org https://pub-b518a77f46ca4165b58d8329e13fb2a9.r2.dev;
-        media-src *;
-    ">
-    <title>FastFlix</title>
-    <link href="styles.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script type="module" src="app.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FastFlix</title>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body { visibility: hidden; }
+
+    .navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 15px;
+      background: #141414;
+      color: white;
+      position: relative;
+    }
+
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .hamburger {
+      display: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    .profile-section-desktop {
+      display: flex;
+      align-items: center;
+    }
+
+    .profile-dropdown {
+      position: relative;
+    }
+
+    .profile-info {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      padding: 5px 10px;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #221f1f;
+      border: 1px solid #333;
+      border-radius: 4px;
+      padding: 10px;
+      min-width: 200px;
+      z-index: 1000;
+      right: 0;
+      top: 100%;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    }
+
+    .dropdown-content a {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: #fff;
+      padding: 8px 12px;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #333;
+    }
+
+    /* Responsividade */
+    @media (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+    .logo {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .profile-section-desktop {
+        position: absolute;
+        right: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    /* Ocultar user-name no mobile */
+    #user-name {
+        display: none;
+    }
+    }
+  </style>
 </head>
-<body>
-    <nav class="navbar">
-        <h1 class="logo">FastFlix</h1>
-        <div class="nav-links">
-            <a href="#" id="filmes-tab" aria-label="Filmes">Filmes</a>
-            <a href="#" id="series-tab" aria-label="Séries">Séries</a>
-            <a href="#" id="tv-tab" aria-label="TV ao Vivo">TV ao Vivo</a>
-            <input id="search" type="text" placeholder="Buscar..." aria-label="Buscar conteúdo">
-            <div class="profile-container">
-                <button id="profile-button" aria-label="Perfil">
-                    <img id="profile-icon-display" src="Default.png" alt="Ícone do perfil" class="profile-icon">
-                    <span id="user-name"></span>
-                </button>
-                <div class="profile-dropdown">
-                    <a href="profile.html">Personalizar Perfil</a>
-                    <button id="logout-button">Desconectar</button>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <main>
-        <div id="loading" class="loading">Carregando lista de canais...</div>
-        <section id="filmes-category" class="category active">
-            <h2>Filmes</h2>
-            <div id="filmes-list" class="carousel"></div>
-            <div id="filmes-pagination" class="pagination"></div>
-        </section>
-        <section id="series-category" class="category hidden">
-            <h2>Séries</h2>
-            <div id="series-list" class="carousel"></div>
-            <div id="series-pagination" class="pagination"></div>
-        </section>
-        <section id="tv-category" class="category hidden">
-            <h2>TV ao Vivo</h2>
-            <div id="tv-list" class="carousel"></div>
-            <div id="tv-pagination" class="pagination"></div>
-        </section>
-    </main>
-    <div id="player-modal" class="modal hidden" aria-hidden="true">
-        <div class="modal-content">
-            <button id="close-modal" aria-label="Fechar modal">✕</button>
-            <div id="modal-content-inner"></div>
-            <video id="videoPlayer" controls></video>
-        </div>
+<body class="player-page">
+  <div id="progress-container" style="display: none;">
+    <p id="progress-text" class="text-gray-400">Carregando lista de canais...</p>
+    <div id="progress-bar">
+      <div id="progress"></div>
     </div>
+  </div>
+
+  <!-- Navbar -->
+  <div class="navbar" id="main-nav">
+    <!-- Hambúrguer (esquerda mobile) -->
+    <i class="fas fa-bars hamburger" onclick="toggleMenu()"></i>
+
+    <!-- Logo (centro mobile, esquerda desktop) -->
+    <div class="logo">FastFlix</div>
+
+    <!-- Links -->
+    <div class="nav-links" id="nav-links">
+      <a href="#" onclick="switchTab('filmes')" id="filmes-tab" class="active">Filmes</a>
+      <a href="#" onclick="switchTab('series')" id="series-tab">Séries</a>
+      <a href="#" onclick="switchTab('tv')" id="tv-tab">TV ao Vivo</a>
+      <!-- Botões mobile -->
+    </div>
+
+    <!-- Perfil (direita sempre) -->
+    <div class="profile-section-desktop">
+      <div class="profile-dropdown">
+        <div class="profile-info" onclick="toggleDropdown(event)">
+          <img id="profile-icon-display" src="Default.png" alt="Perfil" class="w-8 h-8 rounded-full">
+          <span id="user-name"></span>
+          <i class="fas fa-caret-down"></i>
+        </div>
+        <div class="dropdown-content" id="dropdown-content">
+          <a href="profile.html" id="profile-button-desktop"><i class="fas fa-user-edit"></i> Personalizar Perfil</a>
+          <a href="#" id="logout-button"><i class="fas fa-sign-out-alt"></i> Desconectar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Conteúdo principal -->
+  <div class="max-w-6xl mx-auto p-4">
+    <input type="text" id="search" placeholder="Buscar..." class="w-full p-3 bg-gray-800 text-white border-none rounded-md mb-6 focus:outline-none" oninput="filterItems()">
+
+    <div id="filters" class="flex gap-4 mb-6">
+      <select id="category-filter" class="bg-gray-800 text-white p-2 rounded-md focus:outline-none">
+        <option value="">Todas as Categorias</option>
+      </select>
+      
+    </div>
+
+    <div id="categories">
+      <div class="category active" id="filmes-category">
+        <h2>Filmes</h2>
+        <div id="filmes" class="channel-list"></div>
+        <div id="filmes-pagination" class="pagination flex justify-center gap-2 mt-4"></div>
+      </div>
+      <div class="category" id="series-category">
+        <h2>Séries</h2>
+        <div id="series" class="channel-list"></div>
+        <div id="series-pagination" class="pagination flex justify-center gap-2 mt-4"></div>
+      </div>
+      <div class="category" id="tv-category">
+        <h2>TV ao Vivo</h2>
+        <div id="tv" class="channel-list">
+          <button onclick="openTvModal()" class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700">Abrir TV ao Vivo</button>
+        </div>
+        <div id="tv-pagination" class="pagination flex justify-center gap-2 mt-4"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal de Séries -->
+  <div id="series-modal" class="modal">
+    <div class="modal-content">
+      <h2 id="modal-title" class="text-2xl font-bold mb-4"></h2>
+      <div id="season-selector" class="mb-4"></div>
+      <div id="modal-episodes" class="max-h-80 overflow-y-auto"></div>
+      <button onclick="closeModal()" class="mt-4 bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700">Fechar</button>
+    </div>
+  </div>
+
+  <!-- Player Modal -->
+  <div id="player-modal" class="modal" style="display: none; background-color: black; align-items: center; justify-content: center;">
+    <div class="video-container" style="width: 100%; height: 100%; max-width: none; max-height: none;">
+      <a href="#" onclick="closePlayerModal()" class="back-button">Voltar</a>
+      <video id="modalVideoPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
+    </div>
+    <p id="modalErrorMessage" class="error-message" style="display:none; position: absolute; bottom: 20px;"></p>
+  </div>
+
+  <!-- Expired Account Modal -->
+  <div id="expired-account-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); color: white; flex-direction: column; align-items: center; justify-content: center; text-align: center; z-index: 2000;">
+    <h2 class="text-3xl font-bold mb-4">Sua conta está expirada!</h2>
+    <p class="text-xl">Renove sua conta para continuar usando nossos serviços.</p>
+  </div>
+
+  <!-- TV Modal -->
+  <div id="tv-modal" class="modal">
+    <div class="modal-content">
+      <h3 class="text-lg font-bold mb-4">Canais ao Vivo</h3>
+      <input type="text" id="channel-search" placeholder="Buscar canal..." class="w-full p-2 bg-gray-700 rounded mb-4">
+      <ul id="channel-list" class="space-y-2 max-h-80 overflow-y-auto">
+        <!-- Lista de canais será populada via JS -->
+        <li class="text-gray-400">Carregando canais...</li>
+      </ul>
+      <button onclick="closeTvModal()" class="mt-4 bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700">Fechar</button>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script type="module">
+    import { auth, onAuthStateChanged, signOut, db, ref, get, set, onValue } from './firebase-init.js';
+
+    const protectedPages = ['index.html', 'player-page.html', 'Player-TV.html', 'profile.html'];
+    const currentPage = window.location.pathname.split('/').pop() || 'index.html';
+
+    if (protectedPages.includes(currentPage)) {
+      onAuthStateChanged(auth, async (user) => {
+        console.log("onAuthStateChanged triggered. User:", user ? user.uid : "null");
+        if (!user) {
+          console.log("No user found, redirecting to login.html");
+          window.location.href = 'login.html';
+        } else {
+          console.log("User authenticated. Checking status...");
+          const userRef = ref(db, `users/${user.uid}`);
+          const snapshot = await get(userRef);
+
+          if (snapshot.exists()) {
+            const userData = snapshot.val();
+            console.log("User data from DB:", userData);
+            const isExpired = userData.expirationDate && new Date(userData.expirationDate) < new Date();
+
+            if (userData.status === 'blocked') {
+              console.log("Account blocked. Signing out and redirecting.");
+              alert('Sua conta está bloqueada. Entre em contato com o suporte.');
+              signOut(auth);
+              window.location.href = 'login.html';
+            } else if (isExpired) {
+              console.log("Account expired. Showing modal.");
+              document.getElementById('expired-account-modal').style.display = 'flex';
+              document.body.style.visibility = 'visible'; // Make body visible to show the modal
+            } else {
+              console.log("Account active. Making body visible.");
+              document.body.style.visibility = 'visible';
+            }
+          } else {
+            console.log("User exists in Auth but not in DB. Signing out and redirecting.");
+            // User exists in Auth but not in Realtime Database, might be an old or invalid account
+            alert('Sua conta não foi encontrada ou está inválida. Entre em contato com o suporte.');
+            signOut(auth);
+            window.location.href = 'login.html';
+          }
+        }
+      });
+    } else {
+      console.log("Page not protected, making body visible.");
+      document.body.style.visibility = 'visible';
+    }
+
+    // Função para togglar o menu hambúrguer
+    window.toggleMenu = function() {
+      const navLinks = document.querySelector('#nav-links');
+      if (navLinks) {
+        navLinks.classList.toggle('nav-active');
+      }
+    };
+
+    // Fechar o menu ao clicar em um link
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('#nav-links a').forEach(link => {
+        link.addEventListener('click', () => {
+          const navLinks = document.querySelector('#nav-links');
+          if (navLinks && navLinks.classList.contains('nav-active')) {
+            navLinks.classList.remove('nav-active');
+          }
+        });
+      });
+    });
+  </script>
+  <script src="auth.js" type="module"></script>
+  <script src="player.js" type="module"></script>
 </body>
 </html>
